docs: rewrite README for v2.0.0 Python/PyQt6 app